--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@ Theme URI: https://byintention.co
 Description: Wordpress theme by Intention
 Author: Nick Hayward
 Author URI: https://byintention.co
-Version: 1.0
+Version: 1.01
 Tags: 
 License:
 License URI:
+
+GitHub Theme URI: byintention/3cb24
+Primary Branch: main
+
+
 */
 
 @import url("sass/style.css") screen, projection;
