--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,9 +2,9 @@
 Theme Name: 3CB 2024 
 Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention
-Author: Nick Hayward
+Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.02
+Version: 1.03
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -60,10 +60,10 @@ q:before, q:after {
 
 body {
 	background: #fff; 
-	font-size: 14px;
+	font-size: 16px;
 	line-height: $base-line-height;
 	font-family: $base-font-family;
-	font-weight:$regular;
+	font-weight: $regular;
 	color: $colour-text;
 	-ms-text-size-adjust: none;
 	-webkit-text-size-adjust: none;
@@ -97,8 +97,8 @@ h1 { font-size: 60px; }
 h2 { font-size: 45px; }
 h3 { font-size: 35px; }
 h4 { font-size: 25px; }
-h5 { font-size: $base-font-size; }
-h6 { font-size: $base-font-size; }
+h5 { font-size: 20px; }
+h6 { font-size: 18px; }
 
 p { margin: 0 0 $base-font-size 0; }
 
@@ -111,6 +111,10 @@ em { font-style: italic; }
 strong { font-weight: $bold; }
 
 small { font-size: 80%; }
+
+p.has-small-font-size { font-size: 12px; }
+
+p.has-large-font-size { font-size: 18px; line-height: 1.4;}
 
 .wp-caption {
 	background:#eee;
@@ -133,6 +137,12 @@ small { font-size: 80%; }
 		h2 { font-size: 90px; }
 		h3 { font-size: 60px; }
 		h4 { font-size: 35px; }
+		h5 { font-size: 30px; }
+		h6 { font-size: 25px; }
+		
+		p.has-small-font-size { font-size: 15px; }
+		
+		p.has-large-font-size { font-size: 21px;}
 		
 	}
 
@@ -181,9 +191,9 @@ p a, p a:visited { line-height: inherit; }
 
 /* #Lists */
 
-ul, ol { margin: 0 0 $base-font-size $base-font-size * 2; }
-ul { list-style: disc inside; }
-ol { list-style: decimal; }
+ul, ol { margin: 0 0 32px 32px; }
+ul { list-style: disc outside; }
+ol { list-style: decimal outside; }
 ul ul, ul ol,
 ol ol, ol ul { margin: 0 0 0 30px; }
 ul ul li, ul ol li,
@@ -217,13 +227,26 @@ dd {
 .sent .wpcf7-response-output,
 .positive, .wpcf7-mail-sent-ok {
 	background-color:#006600;
-	background-image: url(news-textimages/icon-pos.svg);
-	background-position: 6px 8px;
+	background-image: url(images/icon-pos.svg);
+	background-position: 10px 9px;
 	background-repeat:no-repeat;	
 	background-size:14px 14px;
 	color:#fff;
 	font-size:14px;
-	padding: 5px 10px 5px 28px;
+	font-weight: $bold;
+	padding: 5px 10px 5px 32px;
+}
+
+.warning {
+	background-color:#0082b2;
+	background-image: url(images/icon-info.svg);
+	background-position: 10px 9px;
+	background-repeat:no-repeat;	
+	background-size:14px 14px;
+	color:#fff;
+	font-size:14px;
+	font-weight: $bold;
+	padding: 5px 10px 5px 32px;
 }
 
 .invalid .wpcf7-response-output,
@@ -231,13 +254,14 @@ dd {
 div.wpcf7-validation-errors, 
 div span.wpcf7-not-valid-tip {
 	background-color: #c00;
-	background-image: url(news-textimages/icon-neg.svg);
-	background-position: 6px 8px;
+	background-image: url(images/icon-neg.svg);
+	background-position: 10px 9px;
 	background-repeat:no-repeat;	
 	background-size:14px 14px;
 	color:#fff;
 	font-size:14px;
-	padding: 5px 10px 5px 28px;
+	font-weight: $bold;
+	padding: 5px 10px 5px 32px;
 }
 
 span.wpcf7-not-valid-tip {
@@ -297,20 +321,25 @@ span.wpcf7-not-valid-tip {
 }
 
 .wpcf7-spinner:before {
-	content: url(news-textimages/icon-refresh2.svg);
+	content: url(images/icon-refresh2.svg);
 	transform-origin: center center;
 }
 
-tt,
-kbd,
-code,
 pre {
+	background:#ddd;
+	display:block;
 	font-family: monospace;
+	margin-bottom:20px;
+	padding:20px;
+	tab-size:4;
 	white-space: pre-wrap;
+	word-break: break-word;
 }
 
-pre {
-	margin-bottom:20px;
+code {
+	background:#ddd;
+	font-family: monospace;
+	padding:3px 5px;
 }
 
 sub, 
@@ -486,6 +515,9 @@ fieldset {
 	border:1px solid #eee;
 	margin-bottom: 20px;
 	padding:2%;
+	> div {
+		margin-bottom: 10px;
+	}
 }
 
 input[type="text"],
@@ -496,10 +528,10 @@ input[type="number"],
 textarea,
 select {
 	background: #fff;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-		-moz-border-radius: 2px;
-		-webkit-border-radius: 2px;
+	border: 2px solid #ccc;
+	border-radius: 0;
+		-moz-border-radius: 0;
+		-webkit-border-radius: 0;
 	box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
@@ -507,9 +539,10 @@ select {
 	display: block; 
 	font-family: $base-font-family;
 	font-size: $base-font-size*.75;
+	line-height:1.2;
 	margin: 0;
 	outline: none;
-	padding: 9px 10px;
+	padding: 15px ;
 	max-width: 100%;
 	width: 100%;
 	-webkit-appearance: none;
@@ -521,7 +554,7 @@ input[type="email"]:focus,
 input[type="tel"]:focus,
 input[type="number"]:focus,
 textarea:focus {
-	border: 1px solid #aaa;
+	border: 2px solid #aaa;
 		-moz-box-shadow: 0 0 3px rgba(0,0,0,.2);
 	-webkit-box-shadow: 0 0 3px rgba(0,0,0,.2);
 	box-shadow:  0 0 3px rgba(0,0,0,.2);
@@ -533,14 +566,14 @@ textarea {
 }
 
 .select-input { 
-	background-color: #fafafa;
-	background-image:url(news-textimages/icon-chev-down-grey.svg);
+	background-color: #fff;
+	background-image:url(images/icon-chev-down-grey.svg);
 	background-position: right 12px top 50%;
 	background-repeat: no-repeat;
 	background-size: 14px auto;
-	border: 1px solid #ccc;
+	border: 2px solid #ccc;
 	border-radius: 2px;
-	height: 34px;
+	height: 54px;
 	min-width:200px;
 	overflow: hidden;
 	position: relative;
@@ -594,7 +627,7 @@ input[type="checkbox"] {
 	}
 
 
-/* Grid < 600px */
+/* Grid < 800px */
 
 	.container { 
 	  	-moz-box-sizing: border-box;
@@ -636,68 +669,70 @@ input[type="checkbox"] {
 
 /* Grid > 600px */
 
-  @media only screen and (min-width: 600px) {
-	     
-    .container { 
-    	background:transparent;
-    	position: relative;
-    	max-width: 1200px;
-    	margin: 0 auto;
-    	padding: 0;
-    }
-	
-	.grid {
-		display:flex;
-		flex-wrap: wrap;
-	}
-    
-    .container .column,
-    .container .columns { 
-    		box-sizing: border-box;
-    		-moz-box-sizing: border-box;
-			-webkit-box-sizing: border-box;
-    		display: inline;
-    		float: left;
+	@media only screen and (min-width: 800px) {
+
+		.container { 
+			background:transparent;
+			display: flex;
+			flex-wrap: wrap;
+			position: relative;
+			max-width: 1200px;
+			margin: 0 auto;
+			padding:0 1%;
+		}
+		
+		.container .column,
+		.container .columns { 
 			margin:0 1%;
 		}
-	
-	  /* Nested Column Classes */
-	  .column.alpha, .columns.alpha               { margin-left: 0; }
-	  .column.omega, .columns.omega               { margin-right: 0; }
-	
-	  /* Base Grid */
-	  .container .one.column,
-	  .container .one.columns                     { width: 6.333%; }
-	  .container .two.columns                     { width: 14.666%; }
-	  .container .three.columns                   { width: 23%; }
-	  .container .four.columns                    { width: 31.333%; }
-	  .container .five.columns                    { width: 39.666%; }
-	  .container .six.columns                     { width: 48%; }
-	  .container .seven.columns                   { width: 56.333%; }
-	  .container .eight.columns                   { width: 64.666%; }
-	  .container .nine.columns                    { width: 73%; }
-	  .container .ten.columns                     { width: 81.333%; }
-	  .container .eleven.columns                  { width: 89.666%; }
-	  .container .twelve.columns                  { width: 98%; }
-	
-		.container .one-quarter.column              { width: 23%; }
-		.container .one-half.column             		{ width: 48%; }
-		.container .three-quarter.column            { width: 73%; }
-	  .container .one-third.column                { width: 31.333%; }
-	  .container .two-thirds.column               { width: 64.666%; }
-	
-		.row { 
-		    margin: 0 -1% 2% -1%;
-		}	
 		
-  } 
-  
-  .styletest {
-		margin-bottom:2%;
+		.gridRow,
+		.grid {
+			display: flex;
+			flex-wrap: wrap;
+		}
+		
+		/* Base Grid */
+		.container .one.column,
+		.container .one.columns             { flex:0 0 6.333%; }
+		.container .two.columns             { flex:0 0 14.666%; }
+		.container .three.columns           { flex:0 0 23%; }
+		.container .four.columns            { flex:0 0 31.333%; }
+		.container .five.columns            { flex:0 0 39.666%; }
+		.container .six.columns             { flex:0 0 48%; }
+		.container .seven.columns           { flex:0 0 56.333%; }
+		.container .eight.columns           { flex:0 0 64.666%; }
+		.container .nine.columns            { flex:0 0 73%; }
+		.container .ten.columns             { flex:0 0 81.333%; }
+		.container .eleven.columns          { flex:0 0 89.666%; }
+		.container .twelve.columns          { flex:0 0 98%; }
+		
+		.container .one-quarter.column      { flex:0 0 23%; }
+		.container .one-half.column         { flex:0 0 48%; }
+		.container .three-quarter.column    { flex:0 0 73%; }
+		.container .one-third.column        { flex:0 0 31.333%; }
+		.container .two-thirds.column	   { flex:0 0 64.666%; }
+		
+		.row {
+			margin: 0 -1% 2% -1%;
+		}
+		
 	}
 	
-	.styletest .column,
-	.styletest .columns {
+	@media only screen and (min-width: 1200px) {
+		 .container {
+			 padding:0;
+		}
+	}
+	
+	.container.gridRow {
+		clear:both;
+		margin-bottom:2%;
+		width:100%;
+	}
+	
+	.gridRow .column,
+	.gridRow .columns {
 		background:#eee;
 		border:1px solid #ccc;
 		box-sizing: border-box;
@@ -750,38 +785,45 @@ or wrap each row of columns in a <div class="row"> */
 		top:0;
 		left:0;
 		right:0;
-	transition: height 0.2s ease-in;
+	transition: all 0.1s ease-in-out;
 	z-index:999;
 	.container {
 		position: relative;
 	}
 	svg {
 		path {
-			fill:#fff;
+			fill:#222;
 		}
 	}
-	&.whiteHeader {
-		color:#222;
+	&.darkHeader {
+		color:#fff;
 		svg {
 			path {
-				fill:#000;
+				fill:#fff;
 			}
 		}
 		#headerLogin {
-			color:#222;
+			color:#fff;
+		}
+		#nav2 a {
+			color:#fff;
 		}
 		#nav2 a:hover {
-			color:#222;
+			color:$colour-link;
 		}
 	}
 	&.scrollHeader {
 		background:rgba(255,255,255,.95);
 		box-shadow:0 0 20px rgba(0,0,0,0.1);
 		color:#222;
+		transition: all 0.1s ease-in-out;
 		svg {
 			path {
-				fill:#000;
+				fill:#222;
 			}
+		}
+		#nav2 a {
+			color:$colour-link;
 		}
 		#headerLogin {
 			color:#222;
@@ -816,7 +858,7 @@ or wrap each row of columns in a <div class="row"> */
 	}
 
 #headerLogin {
-	color:#fff;
+	color:#222;
 	position: absolute;
 		top:31px;
 		right:80px;
@@ -961,7 +1003,7 @@ or wrap each row of columns in a <div class="row"> */
 
 
 #headerContactMobile {
-	background-image: url(news-textimages/icon-mobile.svg);
+	background-image: url(images/icon-mobile.svg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size:auto 100%;
@@ -1144,12 +1186,12 @@ or wrap each row of columns in a <div class="row"> */
 	}
 
 	button:first-child {
-		background-image:url(news-textimages/icon-down-grey.svg);
+		background-image:url(images/icon-down-grey.svg);
 		transform: rotate(90deg);
 	}	
 	
 	button:nth-child(2) {
-		background-image:url(news-textimages/icon-down-grey.svg);
+		background-image:url(images/icon-down-grey.svg);
 		transform: rotate(-90deg);
 	}
 	
@@ -1425,7 +1467,7 @@ html .gallery .expand {
 }
 
 .faq-question:before {
-	background-image: url(news-textimages/icon-chev-down-grey.svg);
+	background-image: url(images/icon-chev-down-grey.svg);
 	background-size:100% auto;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -1686,13 +1728,14 @@ html .gallery .expand {
 						color:$colour-button;
 						display:block;
 						font-size:20px;
+						font-weight: $regular;
 						height:40px;
 						line-height:40px;
-						padding:0 40px;
+						margin:0 40px;
 						text-decoration:none;
 						text-transform: uppercase;
 						&:last-child {
-							padding-right:0;
+							margin-right:0;
 						}
 					}
 					
@@ -1745,7 +1788,7 @@ html .gallery .expand {
 		}
 		
 		#nav2 .menu-parent-item > a:after {
-			background-image: url(news-textimages/icon-chev-down-white.svg);
+			background-image: url(images/icon-chev-down-white.svg);
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size:auto 8px;
@@ -1764,78 +1807,42 @@ html .gallery .expand {
 			opacity:0;
 			transition: all 0.1s linear;
 		}
-		
-		#header.scrollHeader #nav2 {
-			
-		}
-		
+	}
+
+	
+/* Custom checkbox */
+	
+	label {
+		line-height:30px;
 	}
 	
-	
-	
-	
-.wpcf7 {
-	
-
 	/* Hide the browser's default checkbox */
 	input[type="checkbox"] {
-		cursor: pointer;
-		height: 0;
-	  position: absolute;
-	  opacity: 0;
-	  width: 0;
-	}
-	
-	/* Create a custom checkbox */
-	.checkmark {
-		background-color: #fafafa;
+		appearance:none;
+		background-color:#fff;
+		background-position: 50%;
+		background-size: contain;
+		background-repeat: no-repeat;
 		border:1px solid #ccc;
-		display: inline-block;
-	  height: 25px;
-	  position: absolute;
-	  	top: 0;
-			left: 0;
-	  width: 25px;
-	}
-	
-	/* On mouse-over, add a grey background color */
-	.wpcf7:hover input[type="checkbox"] ~ .checkmarkx {
-	  background-color: #ccc;
-	}
-	
-	/* When the checkbox is checked, add a blue background */
-	input[type="checkbox"]:checked ~ .checkmark {
-	  background-color: #2196F3;
-	}
-	
-	/* Create the checkmark/indicator (hidden when not checked) */
-	.checkmark:after {
-	  content: "";
-	  position: absolute;
-	  display: none;
-	}
-	
-	/* Show the checkmark when checked */
-	input[type="checkbox"]:checked ~ .checkmark:after {
-	  display: block;
-	}
-	
-	/* Style the checkmark/indicator */
-	.checkmark:after {
-		 border: solid white;
-	  border-width: 0 3px 3px 0;
+		border-radius:5px;
 		display:inline-block;
-		height: 10px;
-		position: absolute;
-	  	left: 9px;
-			top: 5px;
-	  width: 5px;
-	  	-webkit-transform: rotate(45deg);
-			-ms-transform: rotate(45deg);
-	  transform: rotate(45deg);
-	}	
-
-}
+		height:24px;
+		margin-right:10px;
+		position:relative;
+			top:0;
+		vertical-align:top;
+		width:24px;
+		&:focus {
+			border-color:#blue;
+			border-radius:5px;
+			box-shadow: 0 0 0 .25rem rgba(35,35,35,.25)
+		}
+	}
+	
+	input:checked[type=checkbox] {
+		background-color:#666;
+		background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3E%3C/svg%3E");
+	}
 
 .wpcf7-acceptance {
 	display: inline-block;	
