--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 Theme Name: 3CB 2024 
 Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention
-Author: Nick Hayward
+Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.02
+Version: 1.03
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -14,29 +14,25 @@ GitHub Theme URI: byintention/3cb24
 Primary Branch: main
 
 */
-@import url("https://fonts.cdnfonts.com/css/gidole");
-/* bebas-neue-regular - latin */
 @font-face {
   font-family: "Bebas Neue";
   font-style: normal;
   font-weight: 400;
-  src: local(""), url("../fonts/bebas-neue-v9-latin-regular.woff2") format("woff2"), url("../fonts/bebas-neue-v9-latin-regular.woff") format("woff");
+  src: local(""), url("fonts/bebas-neue-v9-latin-regular.woff2") format("woff2"), url("fonts/bebas-neue-v9-latin-regular.woff") format("woff");
 }
-/* oswald-regular - latin */
 @font-face {
   font-display: swap;
-  font-family: "Oswald";
+  font-family: "D-DIN";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/oswald-v53-latin-regular.woff2") format("woff2");
+  src: url("fonts/D-DIN.woff2") format("woff2");
 }
-/* oswald-700 - latin */
 @font-face {
   font-display: swap;
-  font-family: "Oswald";
+  font-family: "D-DIN";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/oswald-v53-latin-700.woff2") format("woff2");
+  src: url("fonts/D-DIN-Bold.woff2") format("woff2");
 }
 @media only screen and (max-width: 1199px) {
   #nav2 {
@@ -232,9 +228,9 @@ q:before, q:after {
 /* #Basic Styles */
 body {
   background: #fff;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.5;
-  font-family: "gidole", arial, sans-serif;
+  font-family: "D-DIN", arial, sans-serif;
   font-weight: 400;
   color: #222;
   -ms-text-size-adjust: none;
@@ -284,7 +280,7 @@ h4 {
 }
 
 h5 {
-  font-size: 18px;
+  font-size: 20px;
 }
 
 h6 {
@@ -315,6 +311,15 @@ small {
   font-size: 80%;
 }
 
+p.has-small-font-size {
+  font-size: 12px;
+}
+
+p.has-large-font-size {
+  font-size: 18px;
+  line-height: 1.4;
+}
+
 .wp-caption {
   background: #eee;
   margin-bottom: 20px;
@@ -341,6 +346,18 @@ small {
   }
   h4 {
     font-size: 35px;
+  }
+  h5 {
+    font-size: 30px;
+  }
+  h6 {
+    font-size: 25px;
+  }
+  p.has-small-font-size {
+    font-size: 15px;
+  }
+  p.has-large-font-size {
+    font-size: 21px;
   }
 }
 /*	Blockquotes  */
@@ -396,15 +413,15 @@ p a, p a:visited {
 
 /* #Lists */
 ul, ol {
-  margin: 0 0 18px 36px;
+  margin: 0 0 32px 32px;
 }
 
 ul {
-  list-style: disc inside;
+  list-style: disc outside;
 }
 
 ol {
-  list-style: decimal;
+  list-style: decimal outside;
 }
 
 ul ul, ul ol,
@@ -439,13 +456,26 @@ dd {
 .sent .wpcf7-response-output,
 .positive, .wpcf7-mail-sent-ok {
   background-color: #006600;
-  background-image: url(news-textimages/icon-pos.svg);
-  background-position: 6px 8px;
+  background-image: url(images/icon-pos.svg);
+  background-position: 10px 9px;
   background-repeat: no-repeat;
   background-size: 14px 14px;
   color: #fff;
   font-size: 14px;
-  padding: 5px 10px 5px 28px;
+  font-weight: 700;
+  padding: 5px 10px 5px 32px;
+}
+
+.warning {
+  background-color: #0082b2;
+  background-image: url(images/icon-info.svg);
+  background-position: 10px 9px;
+  background-repeat: no-repeat;
+  background-size: 14px 14px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 5px 10px 5px 32px;
 }
 
 .invalid .wpcf7-response-output,
@@ -453,13 +483,14 @@ dd {
 div.wpcf7-validation-errors,
 div span.wpcf7-not-valid-tip {
   background-color: #c00;
-  background-image: url(news-textimages/icon-neg.svg);
-  background-position: 6px 8px;
+  background-image: url(images/icon-neg.svg);
+  background-position: 10px 9px;
   background-repeat: no-repeat;
   background-size: 14px 14px;
   color: #fff;
   font-size: 14px;
-  padding: 5px 10px 5px 28px;
+  font-weight: 700;
+  padding: 5px 10px 5px 32px;
 }
 
 span.wpcf7-not-valid-tip {
@@ -517,20 +548,25 @@ span.wpcf7-not-valid-tip {
 }
 
 .wpcf7-spinner:before {
-  content: url(news-textimages/icon-refresh2.svg);
+  content: url(images/icon-refresh2.svg);
   transform-origin: center center;
 }
 
-tt,
-kbd,
-code,
 pre {
+  background: #ddd;
+  display: block;
   font-family: monospace;
+  margin-bottom: 20px;
+  padding: 20px;
+  tab-size: 4;
   white-space: pre-wrap;
+  word-break: break-word;
 }
 
-pre {
-  margin-bottom: 20px;
+code {
+  background: #ddd;
+  font-family: monospace;
+  padding: 3px 5px;
 }
 
 sub,
@@ -649,7 +685,7 @@ input[type=button] {
   color: #5c9bbf;
   cursor: pointer;
   display: inline-block;
-  font-family: "gidole", arial, sans-serif;
+  font-family: "D-DIN", arial, sans-serif;
   font-size: 13.5px;
   line-height: 1.2;
   overflow: visible;
@@ -711,6 +747,9 @@ fieldset {
   margin-bottom: 20px;
   padding: 2%;
 }
+fieldset > div {
+  margin-bottom: 10px;
+}
 
 input[type=text],
 input[type=password],
@@ -720,20 +759,21 @@ input[type=number],
 textarea,
 select {
   background: #fff;
-  border: 1px solid #ccc;
-  border-radius: 2px;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
+  border: 2px solid #ccc;
+  border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   color: #777;
   display: block;
-  font-family: "gidole", arial, sans-serif;
+  font-family: "D-DIN", arial, sans-serif;
   font-size: 13.5px;
+  line-height: 1.2;
   margin: 0;
   outline: none;
-  padding: 9px 10px;
+  padding: 15px;
   max-width: 100%;
   width: 100%;
   -webkit-appearance: none;
@@ -745,7 +785,7 @@ input[type=email]:focus,
 input[type=tel]:focus,
 input[type=number]:focus,
 textarea:focus {
-  border: 1px solid #aaa;
+  border: 2px solid #aaa;
   -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
@@ -757,14 +797,14 @@ textarea {
 }
 
 .select-input {
-  background-color: #fafafa;
-  background-image: url(news-textimages/icon-chev-down-grey.svg);
+  background-color: #fff;
+  background-image: url(images/icon-chev-down-grey.svg);
   background-position: right 12px top 50%;
   background-repeat: no-repeat;
   background-size: 14px auto;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-radius: 2px;
-  height: 34px;
+  height: 54px;
   min-width: 200px;
   overflow: hidden;
   position: relative;
@@ -778,7 +818,7 @@ select {
   cursor: pointer;
   border: 0;
   display: block;
-  font-family: "gidole", arial, sans-serif;
+  font-family: "D-DIN", arial, sans-serif;
   font-size: 13.5px;
   font-weight: 400;
   line-height: 1.2;
@@ -814,7 +854,7 @@ input[type=checkbox] {
     font-size: 18px;
   }
 }
-/* Grid < 600px */
+/* Grid < 800px */
 .container {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -856,97 +896,95 @@ input[type=checkbox] {
 }
 
 /* Grid > 600px */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
   .container {
     background: transparent;
+    display: flex;
+    flex-wrap: wrap;
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 1%;
   }
+  .container .column,
+  .container .columns {
+    margin: 0 1%;
+  }
+  .gridRow,
   .grid {
     display: flex;
     flex-wrap: wrap;
   }
-  .container .column,
-  .container .columns {
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    display: inline;
-    float: left;
-    margin: 0 1%;
-  }
-  /* Nested Column Classes */
-  .column.alpha, .columns.alpha {
-    margin-left: 0;
-  }
-  .column.omega, .columns.omega {
-    margin-right: 0;
-  }
   /* Base Grid */
   .container .one.column,
   .container .one.columns {
-    width: 6.333%;
+    flex: 0 0 6.333%;
   }
   .container .two.columns {
-    width: 14.666%;
+    flex: 0 0 14.666%;
   }
   .container .three.columns {
-    width: 23%;
+    flex: 0 0 23%;
   }
   .container .four.columns {
-    width: 31.333%;
+    flex: 0 0 31.333%;
   }
   .container .five.columns {
-    width: 39.666%;
+    flex: 0 0 39.666%;
   }
   .container .six.columns {
-    width: 48%;
+    flex: 0 0 48%;
   }
   .container .seven.columns {
-    width: 56.333%;
+    flex: 0 0 56.333%;
   }
   .container .eight.columns {
-    width: 64.666%;
+    flex: 0 0 64.666%;
   }
   .container .nine.columns {
-    width: 73%;
+    flex: 0 0 73%;
   }
   .container .ten.columns {
-    width: 81.333%;
+    flex: 0 0 81.333%;
   }
   .container .eleven.columns {
-    width: 89.666%;
+    flex: 0 0 89.666%;
   }
   .container .twelve.columns {
-    width: 98%;
+    flex: 0 0 98%;
   }
   .container .one-quarter.column {
-    width: 23%;
+    flex: 0 0 23%;
   }
   .container .one-half.column {
-    width: 48%;
+    flex: 0 0 48%;
   }
   .container .three-quarter.column {
-    width: 73%;
+    flex: 0 0 73%;
   }
   .container .one-third.column {
-    width: 31.333%;
+    flex: 0 0 31.333%;
   }
   .container .two-thirds.column {
-    width: 64.666%;
+    flex: 0 0 64.666%;
   }
   .row {
     margin: 0 -1% 2% -1%;
   }
 }
-.styletest {
+@media only screen and (min-width: 1200px) {
+  .container {
+    padding: 0;
+  }
+}
+.container.gridRow {
+  clear: both;
   margin-bottom: 2%;
+  width: 100%;
 }
 
-.styletest .column,
-.styletest .columns {
+.gridRow .column,
+.gridRow .columns {
   background: #eee;
   border: 1px solid #ccc;
   box-sizing: border-box;
@@ -1008,34 +1046,41 @@ or wrap each row of columns in a <div class="row"> */
   top: 0;
   left: 0;
   right: 0;
-  transition: height 0.2s ease-in;
+  transition: all 0.1s ease-in-out;
   z-index: 999;
 }
 #header .container {
   position: relative;
 }
 #header svg path {
+  fill: #222;
+}
+#header.darkHeader {
+  color: #fff;
+}
+#header.darkHeader svg path {
   fill: #fff;
 }
-#header.whiteHeader {
-  color: #222;
+#header.darkHeader #headerLogin {
+  color: #fff;
 }
-#header.whiteHeader svg path {
-  fill: #000;
+#header.darkHeader #nav2 a {
+  color: #fff;
 }
-#header.whiteHeader #headerLogin {
-  color: #222;
-}
-#header.whiteHeader #nav2 a:hover {
-  color: #222;
+#header.darkHeader #nav2 a:hover {
+  color: #5c9bbf;
 }
 #header.scrollHeader {
   background: rgba(255, 255, 255, 0.95);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   color: #222;
+  transition: all 0.1s ease-in-out;
 }
 #header.scrollHeader svg path {
-  fill: #000;
+  fill: #222;
+}
+#header.scrollHeader #nav2 a {
+  color: #5c9bbf;
 }
 #header.scrollHeader #headerLogin {
   color: #222;
@@ -1062,7 +1107,7 @@ or wrap each row of columns in a <div class="row"> */
   }
 }
 #headerLogin {
-  color: #fff;
+  color: #222;
   position: absolute;
   top: 31px;
   right: 80px;
@@ -1189,7 +1234,7 @@ or wrap each row of columns in a <div class="row"> */
 }
 
 #headerContactMobile {
-  background-image: url(news-textimages/icon-mobile.svg);
+  background-image: url(images/icon-mobile.svg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: auto 100%;
@@ -1337,11 +1382,11 @@ or wrap each row of columns in a <div class="row"> */
   width: 40px;
 }
 .tns-controls button:first-child {
-  background-image: url(news-textimages/icon-down-grey.svg);
+  background-image: url(images/icon-down-grey.svg);
   transform: rotate(90deg);
 }
 .tns-controls button:nth-child(2) {
-  background-image: url(news-textimages/icon-down-grey.svg);
+  background-image: url(images/icon-down-grey.svg);
   transform: rotate(-90deg);
 }
 
@@ -1578,7 +1623,7 @@ html .gallery .expand {
 }
 
 .faq-question:before {
-  background-image: url(news-textimages/icon-chev-down-grey.svg);
+  background-image: url(images/icon-chev-down-grey.svg);
   background-size: 100% auto;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1800,14 +1845,15 @@ html .gallery .expand {
     color: #5c9bbf;
     display: block;
     font-size: 20px;
+    font-weight: 400;
     height: 40px;
     line-height: 40px;
-    padding: 0 40px;
+    margin: 0 40px;
     text-decoration: none;
     text-transform: uppercase;
   }
   #nav2 ul li a:last-child {
-    padding-right: 0;
+    margin-right: 0;
   }
   #nav2 ul li a:hover {
     color: rgb(128.6211453744, 177.4669603524, 205.3788546256);
@@ -1847,7 +1893,7 @@ html .gallery .expand {
     padding-right: 30px;
   }
   #nav2 .menu-parent-item > a:after {
-    background-image: url(news-textimages/icon-chev-down-white.svg);
+    background-image: url(images/icon-chev-down-white.svg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: auto 8px;
@@ -1867,58 +1913,37 @@ html .gallery .expand {
     transition: all 0.1s linear;
   }
 }
-.wpcf7 {
-  /* Hide the browser's default checkbox */
-  /* Create a custom checkbox */
-  /* On mouse-over, add a grey background color */
-  /* When the checkbox is checked, add a blue background */
-  /* Create the checkmark/indicator (hidden when not checked) */
-  /* Show the checkmark when checked */
-  /* Style the checkmark/indicator */
+/* Custom checkbox */
+label {
+  line-height: 30px;
 }
-.wpcf7 input[type=checkbox] {
-  cursor: pointer;
-  height: 0;
-  position: absolute;
-  opacity: 0;
-  width: 0;
-}
-.wpcf7 .checkmark {
-  background-color: #fafafa;
+
+/* Hide the browser's default checkbox */
+input[type=checkbox] {
+  appearance: none;
+  background-color: #fff;
+  background-position: 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
   border: 1px solid #ccc;
+  border-radius: 5px;
   display: inline-block;
-  height: 25px;
-  position: absolute;
+  height: 24px;
+  margin-right: 10px;
+  position: relative;
   top: 0;
-  left: 0;
-  width: 25px;
+  vertical-align: top;
+  width: 24px;
 }
-.wpcf7 .wpcf7:hover input[type=checkbox] ~ .checkmarkx {
-  background-color: #ccc;
+input[type=checkbox]:focus {
+  border-color: #blue;
+  border-radius: 5px;
+  box-shadow: 0 0 0 0.25rem rgba(35, 35, 35, 0.25);
 }
-.wpcf7 input[type=checkbox]:checked ~ .checkmark {
-  background-color: #2196F3;
-}
-.wpcf7 .checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-.wpcf7 input[type=checkbox]:checked ~ .checkmark:after {
-  display: block;
-}
-.wpcf7 .checkmark:after {
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  height: 10px;
-  position: absolute;
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+
+input:checked[type=checkbox] {
+  background-color: #666;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3E%3C/svg%3E");
 }
 
 .wpcf7-acceptance {
