trimming, add new Photoswipe

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.03
+Version: 1.04
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -2214,3 +2214,5 @@ html #tribe-events-pg-template{
 		padding-top:30px;
 	}
 }
+
+@import 'photoswipe';
