--- a/sass/style.scss
+++ b/sass/style.scss
@@ -891,19 +891,28 @@ or wrap each row of columns in a <div class="row"> */
 
 #headerLogin {
 	color:#222;
+	font-size: 14px;
+	line-height: 1.3;
 	position: absolute;
-		top:31px;
+		top:21px;
 		right:80px;
-	text-align: right;
-	width:200px;
+	text-align: center;
+	width:220px;
+	strong {
+		display: block;
+	}
 }	
 	
 	@media only screen and (min-width: 1200px) {
 		
 		#headerLogin {
-			top:15px;
+			font-size: 16px;
+			top:10px;
 			right:1%;
 			width:auto;
+			strong {
+				display: inline;
+			}
 		}
 	}
 
@@ -1118,7 +1127,7 @@ or wrap each row of columns in a <div class="row"> */
 		color:#fff;
 		position: absolute;
 			left:0;
-			top:50%;
+			top:60%;
 		transform: translateY(-50%);
 		width:100%;
 		
@@ -1142,14 +1151,13 @@ or wrap each row of columns in a <div class="row"> */
 }
 
 
+	@media only screen and (min-width: 830px) {
 	
-	
-	
-
-
-	@media only screen and (min-width: 600px) {
-	
-		
+		.banners {
+			.inner {
+				top: 50%;
+			}
+		}
 	
 	}
 
@@ -1364,6 +1372,12 @@ or wrap each row of columns in a <div class="row"> */
 	p:last-child {
 		margin:0;
 	}
+	.container {
+		margin-bottom: 60px;
+	}
+	.text {
+		margin-bottom: 30px;
+	}
 }
 
 	@media only screen and (min-width: 830px) {
@@ -1371,18 +1385,20 @@ or wrap each row of columns in a <div class="row"> */
 		.fiftyFifty {
 			.container {
 				display:flex;
-				align-items: center;
+					align-items: center;
+				margin: 0 auto;
 				.box {
 					flex:0 0 50%;
 				}
 				.text {
-					padding:0 40px 0 0;
+					margin:0;
+					padding:0 60px 0 0;
 				}
 			}
 			.flip {
 				flex-direction: row-reverse; 
 				.text {
-					padding:0 0 0 40px;
+					padding:0 0 0 60px;
 				}
 			}
 		}
