--- a/style.css
+++ b/style.css
@@ -1128,18 +1128,27 @@ or wrap each row of columns in a <div class="row"> */
 }
 #headerLogin {
   color: #222;
+  font-size: 14px;
+  line-height: 1.3;
   position: absolute;
-  top: 31px;
+  top: 21px;
   right: 80px;
-  text-align: right;
-  width: 200px;
+  text-align: center;
+  width: 220px;
+}
+#headerLogin strong {
+  display: block;
 }
 
 @media only screen and (min-width: 1200px) {
   #headerLogin {
-    top: 15px;
+    font-size: 16px;
+    top: 10px;
     right: 1%;
     width: auto;
+  }
+  #headerLogin strong {
+    display: inline;
   }
 }
 #headerLogo {
@@ -1324,7 +1333,7 @@ or wrap each row of columns in a <div class="row"> */
   color: #fff;
   position: absolute;
   left: 0;
-  top: 50%;
+  top: 60%;
   transform: translateY(-50%);
   width: 100%;
 }
@@ -1344,6 +1353,11 @@ or wrap each row of columns in a <div class="row"> */
   background: #222;
 }
 
+@media only screen and (min-width: 830px) {
+  .banners .inner {
+    top: 50%;
+  }
+}
 .filler {
   padding: 40px 0 0 0;
 }
@@ -1526,23 +1540,31 @@ or wrap each row of columns in a <div class="row"> */
 .fiftyFifty p:last-child {
   margin: 0;
 }
+.fiftyFifty .container {
+  margin-bottom: 60px;
+}
+.fiftyFifty .text {
+  margin-bottom: 30px;
+}
 
 @media only screen and (min-width: 830px) {
   .fiftyFifty .container {
     display: flex;
     align-items: center;
+    margin: 0 auto;
   }
   .fiftyFifty .container .box {
     flex: 0 0 50%;
   }
   .fiftyFifty .container .text {
-    padding: 0 40px 0 0;
+    margin: 0;
+    padding: 0 60px 0 0;
   }
   .fiftyFifty .flip {
     flex-direction: row-reverse;
   }
   .fiftyFifty .flip .text {
-    padding: 0 0 0 40px;
+    padding: 0 0 0 60px;
   }
 }
 .twoColumn {
