--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,10 @@
 /*
 Theme Name: 3CB 2024 
 Theme URI: https://byintention.co
-Description: Design by Arka, Wordpress theme by Nick at Intention
+Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.11
+Version: 1.12
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -780,6 +780,11 @@ or wrap each row of columns in a <div class="row"> */
 	background:#fff;
 }
 
+body.mobilenavopen  {
+	overflow: hidden;
+}
+
+
 #header {
 	background:transparent;
 	height:80px;
@@ -823,7 +828,7 @@ or wrap each row of columns in a <div class="row"> */
 						color:#fff;
 					}
 					a:hover {
-						color:#fff;
+						color: $colour-link;
 					}
 				}
 				
@@ -840,30 +845,7 @@ or wrap each row of columns in a <div class="row"> */
 				fill:#222;
 			}
 		}
-		#nav2 {
-			a {
-				color:$colour-link;	
-			}
-			a:hover {
-				color:#222;
-			}
-			.menu-item-has-children > a:after {
-				background-image: url(images/icon-chev-down-grey.svg);	
-			}
-			.sub-menu {
-				a {
-					color:#fff;
-				}
-				a:hover {
-					color:#fff;
-				}
-			}
-		}
-		#headerLogin {
-			color:#222;
-		}	
 	}
-
 }
 
 	@media only screen and (min-width: 600px) {
@@ -872,6 +854,39 @@ or wrap each row of columns in a <div class="row"> */
 			height:95px;
 			&.scrollHeader {
 				height:95px;
+			}
+			&.scrollHeader {
+				background:rgba(255,255,255,.95);
+				box-shadow:0 0 20px rgba(0,0,0,0.1);
+				color:#222;
+				transition: all 0.1s ease-in-out;
+				svg {
+					path {
+						fill:#222;
+					}
+				}
+				#nav2 {
+					a {
+						color:$colour-link;	
+					}
+					a:hover {
+						color:#222;
+					}
+					.menu-item-has-children > a:after {
+						background-image: url(images/icon-chev-down-grey.svg);	
+					}
+					.sub-menu {
+						a {
+							color:#fff;
+						}
+						a:hover {
+							color:#fff;
+						}
+					}
+				}
+				#headerLogin {
+					color:#222;
+				}	
 			}
 		}	
 		
@@ -955,6 +970,14 @@ or wrap each row of columns in a <div class="row"> */
 		}
 	}
 }
+
+.post-type-archive-tribe_events #header svg path,
+.page-id-242 #headerLogo svg path,
+.eckb-front-end-body #headerLogo svg path,
+.single-tribe_events #headerLogo svg path {
+	fill:#222;
+}
+
 
 #nav2 {
 	display:none;
@@ -1154,8 +1177,12 @@ or wrap each row of columns in a <div class="row"> */
 	@media only screen and (min-width: 830px) {
 	
 		.banners {
+			.container {
+				max-width: 900px;
+			}
 			.inner {
 				top: 50%;
+				
 			}
 		}
 	
@@ -1740,6 +1767,14 @@ or wrap each row of columns in a <div class="row"> */
 		height:auto;
 		width:30px;
 	}
+	path {
+		fill: #eee;
+		transition:color 0.2s linear;
+	}
+	a:hover path {
+		fill:#fff;
+		transition:color 0.2s linear;
+	}
 }
 
 /* #Media Queries */
@@ -1769,8 +1804,9 @@ or wrap each row of columns in a <div class="row"> */
 		#nav2 {
 			display:block;
 			position: absolute;
-				top:45px;
-				right:1%;
+				top: auto;
+				bottom: 0;
+				right: 1%;
 			width:auto;
 	
 			ul {
@@ -1787,19 +1823,19 @@ or wrap each row of columns in a <div class="row"> */
 					position:relative;
 					
 					a {
-						color:$colour-button;
-						display:block;
-						font-size:20px;
+						color: $colour-button;
+						display: block;
+						font-size: 20px;
 						font-weight: $regular;
-						height:40px;
-						line-height:40px;
-						margin:0 20px;
+						height: 50px;
+						line-height: 40px;
+						margin: 0 20px;
 						text-decoration:none;
 						text-transform: uppercase;
 					}
 					
 					a:hover {
-						color:$colour-link-hover;
+						color:$colour-text;
 					}	
 					
 					&:last-child a {
@@ -1813,9 +1849,6 @@ or wrap each row of columns in a <div class="row"> */
 					&.menu-item-has-children {
 						position:relative;
 						z-index:400;
-						a {
-							
-						}
 						> a {
 							margin-right:40px;
 						}
@@ -1843,40 +1876,66 @@ or wrap each row of columns in a <div class="row"> */
 						
 					}
 					.sub-menu {
-						background: $colour-link;
-						box-shadow:0px 2px 2px rgba(0,0,0,0.3);
-						display:none;
-						padding:10px 0;
+						background: $colour-text;
+						box-shadow: 0 2px 2px rgba(0,0,0,0.3);
+						display: block;
+						max-height: 0;
+						opacity: 0;
+						overflow: visible;
+						padding: 0;
+						pointer-events: none;
 						position: absolute;
-							top: 40px;
+							top: 50px;
 							left: 0;
-						z-index:200;
+						transition: all 0.5s ease;
+						z-index: 9999;
 						li {
 							float:none;
 							a {
-								border:none;
+								border: none;
 								color: #fff;
-								margin:0 20px;
-								overflow:hidden;
-								width:220px;
+								height: 50px;
+								line-height: 50px;
+								margin: 0 20px;
+								overflow: hidden;
+								width: 220px;
 								&:hover {
-									color: #fff;
+									color: $colour-link;
 								}
 							}
+							&:first-child {
+								margin-top: 10px;
+							}
+							&:last-child {
+								margin-bottom: 10px;
+							}
+						}
+						&:before {
+							background: $colour-text;
+							content: "";
+							display: block;
+							height: 20px;
+							position: absolute;
+								top: -5px;
+								left: 35px;
+							transform: rotate(45deg);
+							width: 20px;
 						}
 					}
-					&.openSubnav .sub-menu {
-						display:block;
+					&.menu-item-has-children:hover {
+						.sub-menu {
+							max-height: 9999px;
+							opacity: 1;
+							overflow: visible;
+							padding: 0;
+							pointer-events: all;
+							transition: all 0.5s ease;	
+						}
 					}
 				}
+				
 			}
 		}
-		
-		.navclose {
-			display:none;
-		}
-
-
 	}
 
 
@@ -2284,5 +2343,154 @@ html #tribe-events-pg-template{
 		padding-top:30px;
 	}
 }
+
+
+
+
+
+html .eckb-kb-template {
+	padding-top:100px!important;
+}
+	
+#eckb-article-page-container-v2 .epkb-doc-search-container .epkb-doc-search-container__title {
+	font-weight:bold;
+}
+	
+html #eckb-article-page-container-v2 h1 {
+	font-family: "D-din";
+	font-size:60px;
+	font-weight:bold;
+	margin-bottom:16px!important;
+	text-transform:none;
+}	
+	
+#slotTool{
+	background:#efefef;
+	margin-bottom:50px;
+	padding:20px
+}
+.slotToolSlot{
+	height:30px;
+	line-height:30px;
+	margin-bottom:10px;
+	text-align:left
+}
+.slotToolSlot form{
+	display:inline
+}
+input[type="submit"].slotIcon{
+	background:#fff;
+	background-size:cover;
+	border:1px solid #000;
+	border-radius:100%;
+	cursor:pointer;
+	display:inline-block;
+	font-size:0;
+	height:30px;
+	margin-right:10px;
+	vertical-align:top;
+	width:30px
+}
+input[type="submit"].slotIcon.disabled{
+	cursor:not-allowed
+}
+
+html .tribe-events-event-meta{
+	display:none
+}
+.toaster-wrapper{
+	position:fixed;
+	width:250px
+}
+.toaster-wrapper.bottom-left{
+	bottom:20px;
+	left:20px
+}
+.toaster-wrapper.bottom-right{
+	bottom:20px;
+	right:20px
+}
+.toaster-wrapper.top-right{
+	top:20px;
+	right:20px
+}
+.toaster-wrapper.top-left{
+	top:20px;
+	left:20px
+}
+.toast{
+	background-color:#5c9bbf;
+	border-radius:5px;
+	margin-bottom:10px;
+	transition:0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+	transform:translateY(-20px);
+	opacity:0;
+	pointer-events:none
+}
+.toast.toast-show{
+	pointer-events:auto;
+	opacity:1;
+	transform:translateY(0px)
+}
+.toast.toast-hide{
+	transform:translateY(20px);
+	opacity:0
+}
+.toast-content{
+	color:white;
+	padding:15px 20px;
+	font-size:14px;
+	font-weight:700;
+	display:flex;
+	align-items:center
+}
+#attendanceRoster {
+	background:#eee;
+	margin-bottom:30px;
+	padding:20px
+}
+#attendanceRoster .attendanceCol {
+	border:1px solid #ddd;
+	margin-bottom:20px;
+	padding:10px
+}
+#attendanceRoster ul {
+	list-style:none;
+	margin:0 0 30px 0
+}
+#attendanceRoster li {
+	height:20px;
+	line-height:20px;
+	margin-bottom:10px
+}
+#attendanceRoster li a {
+	display:inline-block;
+	line-height:20px
+}
+#attendanceRoster img {
+	border-radius:100%;
+	height:20px;
+	margin-right:3px;
+	vertical-align:top;
+	width:20px
+}
+@media only screen and (min-width:1200px) {
+	#attendanceRoster{
+		padding:30px
+	}
+	#attendanceRoster .wrap {
+		display:flex
+	}
+	#attendanceRoster .attendanceCol {
+		flex:1 1;
+		margin:0
+	}
+}
+
+html #tribe-events-pg-template{
+	max-width:800px
+}
+
+
 
 @import 'photoswipe';
